--- a/portfolio.html
+++ b/portfolio.html
@@ -31,26 +31,61 @@
         <h1>Portfolio</h1>
         <hr>
           <div class="row">
-            <div class="col-md-6 col-xs-12 col-s-12 img-div">
-              <img src="assets/images/hangman.jpg" class="img-p">
+            <div class="col-sm-12 col-md-6">
+              <div class="thumbnail">
+                <img src="assets/images/hangman.png">
+                <div class="caption">
+                  <h3>Hangman</h3>
+                  <p></p>
+                  <p><a href="#" class="btn btn-info btn-lg btn-block" role="button">View</a>
+                </div>
+              </div>
             </div>
-            <div class="col-md-6 col-xs-12 col-s-12 img-div">  
-              <img src="assets/images/rpg.jpg" class="img-p">
+            <div class="col-sm-12 col-md-6">
+              <div class="thumbnail">
+                <img src="assets/images/rpg.jpg">
+                <div class="caption">
+                  <h3>RPG Game</h3>
+                  <p></p>
+                  <p><a href="#" class="btn btn-info btn-lg btn-block" role="button">View</a>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 col-xs-12 col-s-12 img-div">
-              <img src="assets/images/trivia.jpg" class="img-p">
+            <div class="col-sm-12 col-md-6">
+              <div class="thumbnail">
+                <img src="assets/images/trivia.jpg">
+                <div class="caption">
+                  <h3>Trivia Game</h3>
+                  <p></p>
+                  <p><a href="#" class="btn btn-info btn-lg btn-block" role="button">View</a>
+                </div>
+              </div>
             </div>
-            <div class="col-md-6 col-xs-12 col-s-12 img-div">  
-              <img src="assets/images/rutgers.jpg" class="img-p">
+            <div class="col-sm-12 col-md-6">
+              <div class="thumbnail">
+                <img src="assets/images/rutgers.jpg">
+                <div class="caption">
+                  <h3>Rutgers Info Widget</h3>
+                  <p></p>
+                  <p><a href="#" class="btn btn-info btn-lg btn-block" role="button">View</a>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 col-xs-12 col-s-12 img-div">
-              <img src="assets/images/rps.jpg" class="img-p">
-            </div> 
-          </div>
+            <div class="col-sm-12 col-md-6">
+              <div class="thumbnail">
+                <img src="assets/images/rps.jpg">
+                <div class="caption">
+                  <h3>Rock Paper Scissors</h3>
+                  <p></p>
+                  <p><a href="#" class="btn btn-info btn-lg btn-block" role="button">View</a>
+                </div>
+              </div>
+            </div>
+          </div>  
       </div>
       </div>
       </div>  
