--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Index</title>
+  <title>About Me</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css"/>
 </head>
