--- a/portfolio.html
+++ b/portfolio.html
@@ -33,15 +33,15 @@
           <div class="row">
             <div class="col-sm-12 col-md-6">
               <div class="thumbnail">
-                <img src="assets/images/hangman.png">
+                <img src="assets/images/kyw.jpg">
                 <div class="caption">
-                  <h3>Hangman</h3>
+                  <h3>Know Your Worth</h3>
                   <p></p>
-                  <p><a href="#" class="btn btn-info btn-lg btn-block" role="button">View</a>
+                  <p><a href="https://dworland.github.io/Project-1/index.html" target="_blank" class="btn btn-info btn-lg btn-block" role="button">View</a>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+           <!--  <div class="col-sm-12 col-md-6">
               <div class="thumbnail">
                 <img src="assets/images/rpg.jpg">
                 <div class="caption">
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-          </div>  
+          </div>   -->
       </div>
       </div>
       </div>  
