--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
     <div class="col-md-3 col-xs-12 col-s-12 cwm">
       <div>
-        <h1>Connect With Me</h1>
+        <h1>Connect<br>With Me</h1>
         <hr>
         <div>
           <div class="thumbnail-div"> 
