--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <hr>
         <div>
           <div class="row">
-              <p><img src="assets/images/me.jpg" class="meImg">My name is Judson Fisher. I was born and raised in Buffalo, New York. I moved to Austin six years ago in July 2011. I graduated from the University of Texas in May 2016 with a degree in Corporate Communication Studies.</p>
+              <p><img src="assets/images/me.jpg" class="meImg">My name is Judson Fisher. I was born and raised in Buffalo, New York, and I moved to the Austin area six years ago in July of 2011. I graduated from the University of Texas in May 2016 with a degree in Corporate Communication Studies. I currently study JavaScript full stack web development and hold a strong background in e-learning and business development. Experienced in HTML5, CSS3, JavaScript, jQuery, Bootstrap, Firebase, Node JS, MySQL, and Express JS. Working as an Instructional Designer, I have been responsible for creating 50+ hours of e-learning curriculum for electronic security, low voltage, fire safety, and locksmith industries.</p>
               <br>
-              <p>I work as an instructional designer and am currently enrolled in the UT coding bootcamp with hopes of becoming a successful full stack web developer on completion of the classes and activities. In my spare time I enjoy concerts, reading, traveling, spending time outdoors, and working out.</p>
+              <p>I am currently enrolled in the UT coding bootcamp with a goal of becoming a successful full stack web developer upon completion of the program. Passionate about self-education, technology, health/nutrition, and investing. In my spare time I enjoy concerts, reading, traveling, spending time outdoors, and working out. If you'd like to learn more, I'd love to connect. Contact me at judsonefisher@gmail.com.</p>
             </div>
         </div>
       </div>
