--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index2.html">Judson Fisher</a>
+          <a class="navbar-brand" href="index.html">Judson Fisher</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">About</a></li>
@@ -56,7 +56,7 @@
 
     <div class="col-md-3 col-xs-12 col-s-12 cwm">
       <div>
-        <h1>Connect<br>With Me</h1>
+        <h1>Connect With Me</h1>
         <hr>
         <div>
           <div class="thumbnail-div"> 
