--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index2.html">Judson Fisher</a>
+          <a class="navbar-brand" href="index.html">Judson Fisher</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">About</a></li>
